Fix overflow of '!' '.'  in chat

--- a/src/public/css/components/chat.css
+++ b/src/public/css/components/chat.css
@@ -85,7 +85,7 @@
 .chat__text span {
   padding: var(--padding-text);
   font-size: 1.5rem;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .chat__message {
